logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -243,6 +243,6 @@ h1, h2, h3 {
     display: flex !important;
   }
   .st-key-body-container {
-    margin-top: 4rem;
+    margin-top: 3rem;
   }
 }
